# Syscall and Userspace capability matrix

set(BHARAT_ARCH_HAS_USER_SYSCALL_ENTRY 0)
set(BHARAT_ARCH_HAS_SYSCALL_EXTRACT 0)
set(BHARAT_ARCH_HAS_SDK_SYSCALL_BACKEND 0)
set(BHARAT_USERSPACE_SUPPORTED 0)

if(BHARAT_ARCH_FAMILY MATCHES "X86" AND BHARAT_ARCH_BITS EQUAL 64)
    set(BHARAT_ARCH_HAS_USER_SYSCALL_ENTRY 1)
    set(BHARAT_ARCH_HAS_SYSCALL_EXTRACT 1)
    set(BHARAT_ARCH_HAS_SDK_SYSCALL_BACKEND 1)
    set(BHARAT_USERSPACE_SUPPORTED 1)
elseif(BHARAT_ARCH_FAMILY MATCHES "ARM" AND BHARAT_ARCH_BITS EQUAL 64)
    set(BHARAT_ARCH_HAS_USER_SYSCALL_ENTRY 1)
    set(BHARAT_ARCH_HAS_SYSCALL_EXTRACT 1)
    set(BHARAT_ARCH_HAS_SDK_SYSCALL_BACKEND 1)
    set(BHARAT_USERSPACE_SUPPORTED 1)
elseif(BHARAT_ARCH_FAMILY MATCHES "RISCV" AND BHARAT_ARCH_BITS EQUAL 64)
    set(BHARAT_ARCH_HAS_USER_SYSCALL_ENTRY 1)
    set(BHARAT_ARCH_HAS_SYSCALL_EXTRACT 1)
    set(BHARAT_ARCH_HAS_SDK_SYSCALL_BACKEND 1)
    set(BHARAT_USERSPACE_SUPPORTED 1)
endif()

# Explicitly disable for 32-bit targets for now
if(BHARAT_ARCH_BITS EQUAL 32)
    set(BHARAT_USERSPACE_SUPPORTED 0)
endif()

# Export variables to parent scope
set(BHARAT_ARCH_HAS_USER_SYSCALL_ENTRY ${BHARAT_ARCH_HAS_USER_SYSCALL_ENTRY} PARENT_SCOPE)
set(BHARAT_ARCH_HAS_SYSCALL_EXTRACT ${BHARAT_ARCH_HAS_SYSCALL_EXTRACT} PARENT_SCOPE)
set(BHARAT_ARCH_HAS_SDK_SYSCALL_BACKEND ${BHARAT_ARCH_HAS_SDK_SYSCALL_BACKEND} PARENT_SCOPE)
set(BHARAT_USERSPACE_SUPPORTED ${BHARAT_USERSPACE_SUPPORTED} PARENT_SCOPE)

# Add definitions for C code
add_compile_definitions(BHARAT_ARCH_HAS_USER_SYSCALL_ENTRY=${BHARAT_ARCH_HAS_USER_SYSCALL_ENTRY})
add_compile_definitions(BHARAT_ARCH_HAS_SYSCALL_EXTRACT=${BHARAT_ARCH_HAS_SYSCALL_EXTRACT})

# Validation: fail if userspace is requested but not supported for this arch
option(BHARAT_ENABLE_USERSPACE "Enable userspace support" ON)

if(BHARAT_ENABLE_USERSPACE AND NOT BHARAT_USERSPACE_SUPPORTED)
    message(FATAL_ERROR "Userspace/Syscall support requested (BHARAT_ENABLE_USERSPACE=ON) but not supported for ${BHARAT_ARCH_FAMILY}-${BHARAT_ARCH_BITS}")
endif()
